--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <div id="app"></div>
     
-    <!-- built files will be auto injected -->
+    <!-- 1built files will be auto injected -->
   </body>
 </html>
